[project]
name = "alps"
version = "0.1.0"
requires-python = ">=3.8.5"
dependencies = [
    "torch>=1.12.1+cu113",
    "torchaudio>=0.12.1+cu113",
    "torchvision>=0.13.1+cu113",
    "scikit-learn>=1.3.2",
    "segment-anything>=1.0",
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
extra-index-url = "https://mirrors.aliyun.com/pytorch-wheels/cu113"
explicit = true
